# retentions

./: .editorconfig  .gitignore  .ruff.toml  CHANGELOG.md  CONTRIBUTING.md  DESIGN_DECISONS.md  LICENSE  README.md  RELEASE_POLICY.md  ROADMAP.md  SECURITY.md  pyproject.toml  release.sh  retentions.py
.github/: FUNDING.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: lint-and-test.yml  lint.yml  release.yml  test.yml
debian/: bash-shell-completion  retentions.1  zsh-shell-completion
deploy/man_page/: retentions.1
deploy/shell-completions/: _retentions  retentions.bash
docs/: DESIGN_DECISONS.md  retentions.1
release/: generate_completions.sh  release.sh
tests/: conftest.py  test_companion_rule.py  test_file_stats.py  test_helper.py  test_helper_functions.py  test_log_and_logger.py  test_main.py  test_parser.py  test_read_filelist.py  test_retention_logic.py  test_run_deletion_and_handle.py
