[project]
name = "retentions"
dynamic = ["version"]
description = "A minimal cross-platform CLI tool for file retention management"
authors = [{ name = "Thomas Kuhlmann", email = "mail@thomas-kuhlmann.de" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"

[project.optional-dependencies]
dev = ["ruff>=0.14.0", "mypy>=1.11.0"]

[tool.ruff]
line-length = 160
lint.select = ["E", "W", "F", "I", "UP", "N", "RET", "ARG"]
lint.fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"            # doppelte Anführungszeichen erzwingen
indent-style = "space"            # Spaces statt Tabs
skip-magic-trailing-comma = false
line-ending = "lf"

[tool.ruff.lint.isort]
combine-as-imports = true
force-single-line = false
lines-after-imports = 2
known-first-party = ["retentions"]

[tool.mypy]
python_version = "3.9"
strict = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_unused_ignores = true
warn_return_any = true
warn_redundant_casts = true
warn_unreachable = true
strict_optional = true
no_implicit_optional = true

[tool.black]
line-length = 160
skip-string-normalization = true
