[project]
name = "retentions"
dynamic = ["version"]
description = "A minimal cross-platform CLI tool for file retention management"
authors = [{ name = "Thomas Kuhlmann", email = "mail@thomas-kuhlmann.de" }]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.9,<4"

[dependency-groups]
dev = [
    "ruff>=0.14.0",
    "mypy>=1.11.0",
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "debugpy>=1.8.0",
    "shtab >= 1.7.0, < 2.0.0",
]

[tool.ruff]
line-length = 200

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "N", "RET", "ARG", "ANN", "S"]
fixable = ["ALL"]
per-file-ignores = { "tests/*.py" = ["ANN", "S101"] }

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"

[tool.ruff.lint.isort]
combine-as-imports = true
force-single-line = false
lines-after-imports = 2
known-first-party = ["retentions"]

[tool.mypy]
python_version = "3.9"
strict = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_unused_ignores = true
warn_return_any = true
warn_redundant_casts = true
warn_unreachable = true
strict_optional = true
no_implicit_optional = true
exclude = ["^tests/"]

[[tool.mypy.overrides]]
module = "helper.*"
ignore_errors = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-v --tb=short --maxfail=3"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
pythonpath = ["."]

[tool.black]
line-length = 200
skip-string-normalization = true

[build-system]
requires = ["setuptools>=70", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["retentions"]

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "dirty-tag"
